# ChangeLog for net-firewall/ipsec-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipsec-tools/ChangeLog,v 1.115 2014/01/30 22:53:45 blueness Exp $

*ipsec-tools-0.8.1-r1 (30 Jan 2014)

  30 Jan 2014; Anthony G. Basile <blueness@gentoo.org> +files/racoon.conf.d-r2,
  +files/racoon.init.d-r3, +ipsec-tools-0.8.1-r1.ebuild:
  Add SETKEY_OPTS when init racoon, bug #497440

  05 Jan 2014; Mike Gilbert <floppym@gentoo.org> ipsec-tools-0.8.0-r5.ebuild,
  ipsec-tools-0.8.1.ebuild:
  Don't rename ipsec.conf if libreswan is installed.

  15 Jun 2013; Anthony G. Basile <blueness@gentoo.org> -files/ipsec.conf,
  -files/racoon.conf.d, -files/racoon.init.d, -files/racoon.init.d-r1,
  -ipsec-tools-0.8.0-r3.ebuild, -ipsec-tools-0.8.0-r4.ebuild:
  Remove older versions

  23 Mar 2013; Mike Gilbert <floppym@gentoo.org> ipsec-tools-0.8.0-r5.ebuild,
  ipsec-tools-0.8.1.ebuild:
  Don't rename /etc/ipsec.conf if openswan is installed. Bug 462782 by Plüss
  Roland.

  18 Mar 2013; Anthony G. Basile <blueness@gentoo.org>
  ipsec-tools-0.8.0-r5.ebuild:
  Stable ppc ppc64, bug #461882

  17 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ipsec-tools-0.8.0-r5.ebuild:
  Stable for arm, wrt bug #461882

  16 Mar 2013; Anthony G. Basile <blueness@gentoo.org>
  ipsec-tools-0.8.0-r5.ebuild, ipsec-tools-0.8.1.ebuild:
  Remove epunt_cxx, bug #461904

  16 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ipsec-tools-0.8.0-r5.ebuild:
  Stable for x86, wrt bug #461882

  16 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ipsec-tools-0.8.0-r5.ebuild:
  Stable for amd64, wrt bug #461882

*ipsec-tools-0.8.1 (16 Mar 2013)

  16 Mar 2013; Anthony G. Basile <blueness@gentoo.org>
  +ipsec-tools-0.8.1.ebuild:
  Version bump

*ipsec-tools-0.8.0-r5 (28 Sep 2012)

  28 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
  +ipsec-tools-0.8.0-r5.ebuild, +files/ipsec-tools.conf,
  +files/racoon.conf.d-r1, +files/racoon.init.d-r2: