@@ -14,25 +14,27 @@ AUX racoon.init.d-r3 1294 SHA256 ab30e75a596919d2ba876bb7d37ebdfb9075e261bc4de75
 AUX racoon.pam.d 156 SHA256 166136e27d653e0bf481a6ca79fecb7d9fa2fc3d597d041f97df595f65a8193c SHA512 d3f7e6ca8c9f2b5060ebccb259316bb59c9a7e158e8ef9466765a20db263a4043a590811f1a3ab072b718dbd70898bc69b77e0b19603d7f394b5ac1bd0a4a56c WHIRLPOOL ba7a0a8c3bb39c5fda69de34b822a19696398e0a8789211ac1faae787ee34f9639eb35efe29c67f874b5f9fe674742503e570f441c005974f4a0c93468b8970b
 DIST ipsec-tools-0.8.0.tar.bz2 809297 SHA256 2359a24aa8eda9ca7043fc47950c8e6b7f58a07c5d5ad316aa7de2bc5e3a8717 SHA512 3bec6bab4fe555612f1d48966e797202830f5254a8d2146a14d268ff0c68445af790285214db41ab08ee4888625e8e680c3b848c30789d836169d1612a25fe2c WHIRLPOOL 862d2bbf78aca8c9e01e00c995aeb3b662e1ea4a769081b9880a3fee7821ef5968e10fe75d9671268979188c7ca3b91d507a1fc9a097729d0648bc4c965e675d
 DIST ipsec-tools-0.8.1.tar.bz2 860717 SHA256 fa4a95bb36842f001b84c4e7a1bb727e3ee06147edbc830a881d63abe8153dd4 SHA512 c8308aba9764a8e0a0507dbc62e8e93dc4b51f7215f2c3bb50f2e7e1f46dde0c773cfe2992660ccd319523775a9bab668371ee53cd4af153d2fcf13a0ef4e1eb WHIRLPOOL b3e8743174f7a05ca028f47f5faa66286e397a50c68e7724568b89e5fd2eea76a903c3e77a144e772f913fd51a253466b93e10690125a87d643f186a9689476c
+DIST ipsec-tools-0.8.2.tar.bz2 866465 SHA256 8eb6b38716e2f3a8a72f1f549c9444c2bc28d52c9536792690564c74fe722f2d SHA512 2b7d0efa908d3a699be7ef8b2b126a3809956cb7add50e8efb1cfdfc2d9b70c39ef517379cb9a4fad9e5f0c25937e98535b06c32bd3e729f5129da4ab133e30f WHIRLPOOL 16452a98d6c179913fc7acf8d92f8e9e6f5614c2ac0b798158c218bfb4f6c5228ffea426fe0b26774242b4f29477323de5a4e31a623d94d82b90184a6664c2ce
 EBUILD ipsec-tools-0.8.0-r5.ebuild 7747 SHA256 81361ddd1ebf285c863f03a6a98dc1d8e42a631a399965ef795ee603b29d8d54 SHA512 22f4430e10370cac954e11e375f0bef4f99b18c21f4d413b72bae53ec3ec99a6acca06362199deeb7796acedfd0fc85a733f441a6a95c74899c2ca7509793b17 WHIRLPOOL 78dc35255243c08d6e48411e2b864dd34d121d54a265575f28c345a7f948684534e80a023d23304b66dd7b73eba4af24d12be7341b18584b723af899ad71426c
 EBUILD ipsec-tools-0.8.1-r1.ebuild 7763 SHA256 f734c533ef762dac3b874f627a351e9313e555e7ed31efd98f8f2b5774b4b5ec SHA512 c50b4e258bfb27aef559d7859d4ace0bb81d02fa8b8a310dafa722e36f0294f5c92c9e2e051ba6179128a27773fb4f5a1802b464917312deaecc839c117cc4b2 WHIRLPOOL b5995c9a657df4e140b1562c39d8d77de1748f714103cacd80d5005caf069da36e828098c274fcd1de6ad4f1a758aedaa62c08547f55be992d9f1188d33e5a7f
 EBUILD ipsec-tools-0.8.1.ebuild 7759 SHA256 5cf17707c68083fac4679cf2ccf94228e9e3b925ca66f33d1fdf0cb877c709f9 SHA512 099f181c07018b6f81f292f82b3ed9569aec3fd317645bfc7180341e744b91a38913e6193aaeb94d4b00a6b5d0bd09e8643757034c2dd4b4135ccfdd45ed0475 WHIRLPOOL cab9df28a7bce6937a079332ed279991b7973bf0fde0c0d0bb8fbc837b4b23f0dbaf185ee8a00f2c7847fd74931f07b431489d32331012579501d6d1066693a9
-MISC ChangeLog 18567 SHA256 98f5be72230a361af099f1620bf5ebb4f2b976e33b99a85c5d215c166152f585 SHA512 31dd49604ceb53b1cc8ad1de85625522f0cef63ffff39976d22008a7871d83a487b7a3330f926756a97c045839804bd14ad3c78fd96905ba69295d0e720044e2 WHIRLPOOL 6748c12e40720561be33d8024179e434b6d38bce425aae75e5c26b42a92bb9d0a693ba380bea1512944a7aef8af25dd35ec26c096a01c273be2f8fabbf1f148b
+EBUILD ipsec-tools-0.8.2.ebuild 7760 SHA256 1fffc5293a959f7dd2c8dcf0198fe329a23be5c951dac1a6f1ef1a3f2724dfb0 SHA512 821dd137e6e0344d1504bca7bd56f65c6240b9ce769027f2a014c5a47938e976b54e2e67a6a14f88b5bdb531f39a51c918ca659ba88b774a3f15a7b9a2cc95df WHIRLPOOL 6deb042ee00195e0d7c82236146dc2128a721dd3c59082b1ff041965c3a197ab2dc319471db68afec44f795d7dca0d3d457d84599b07c37c03cf91ebb322f37f
+MISC ChangeLog 18701 SHA256 99bf9273bf607b072d6c2cd382b8f1f1a30670fd6ff049a5e8e24b9af020fd60 SHA512 8566ff8731aaff9b2ee8ee3e95751726a39cffb0080a305ba427378727313a7830ea1a327ec8401a300b213ba031c71c8b7a9bf2f82f0b4af40d8dfa9ac97ed5 WHIRLPOOL e52e243e7293ed5e5d822a455072b4eb9fcad27a96ed4c0dc12ac1b0732c6ef4c9a8d492e4f7b2975d37b475a33080e3310b352dde2bb018995f088ca4785fbf
 MISC metadata.xml 537 SHA256 12de55d6d62b8e91c8996422e33462b5637f9720a5096025752b93906bcbdc40 SHA512 9b26b2cd54e00527201339c3936ac717c57fe596e470d84e0dc0715f778b5797488b6cac61dea83bab61714a23a88e44dbd537bfeeb2b37d285653dcb838fab5 WHIRLPOOL a0dd0b61f957875ca3c50db5aa66470ed493be9c4f002bd165d75b41a8ca51cbcfd2567b4702bf1845b8e0a1ca54239e6ed163098d8b613d1f9f459192acc14e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS6tgcAAoJEJOE+m71LUu60P4QAJN2RGh0eKS/Y/g7/P/tQXaJ
-aphoGtYrpZRVqVetEpVESdDSfeG734qQBy4VqYML0n3AXi+poFfBaMInDz6WVrh1
-htgqvV/zOw72n36B/TARB3o6GwLXhhcMzH//F3ay9ebU4awNYLTHl04NE0zm8S8q
-+cBXg5z2dZGCV5H+PKaHBqukEsvsbs8uweY7F7c4x/Khwm3GpPLMfIeqtvDJvJTt
-h9qdy2BbVxlF7GedKierh6qHE94nupdbfIJqR41mbOE6jgXX70ZMWB3/7uR33P9r
-N5Tb8Jh3Smwbxri7IKlyA0LCc0/I5UOmwQjov1Td5wDCcehdqL10MAdnlXLjYObU
-skDEX932P84EUc21nxLijM7luaLGhwNAbV04EWpJSsu3Y3Xj6Mfh4ZtyAihoxvxh
-QphqJgy2Gt6aNgzKLqTWiBbfCJJTv6iHNl5HhV4uh5+/uVqwDQj5xjrm2b8E5ndu
-l4+EmqufSYceY32h2ijn1Qw8mO16GyPyu5UjGmBu2qEcn/YZ92AcxWACQbREm4dn
-98x8uXjpDU7vwQmAvdbmcfvoyBOcMu5m/zSxy2CwJstEWEN69u5pA2Dmbwg91aZo
-XdneJ4zYYmpvICeUrL8rVPfcmKFNicKmLOdXUkd2IPgg1gSCXU4dEZesZgy9A62y
-OlWQKueVfcgM2Q0NqULA
-=uJuj
+iQIcBAEBCAAGBQJTEL4ZAAoJEJOE+m71LUu668MQAKzPsIo3qZez8sL1fzO2yiPk
+rgVdbhBeSZdQJZysS8ZZNCv/r7QU5HJZlAbqWZS9UNVDp9frJxawYjuEWvEhNp69
+AiZz3T2w5SiDj0NXVnMxQIpCNsN9UOytKBSm98OOHoltXMIdyaYoweAkHvlD9nnu
+i5oACSbXRJocog0HylZREoUamDlPSIPMqfzM94iJdcH2/giWbqA2C6CIxXVsCRMN
+z9/WTwGR1k5Zvg8Nn0zKTy/3gGZNd4OjbAGekcS5S2NpOqwW2HarU2NXVpGcC8fN
+kgW6FCBeWYBI15ym9UalWC+eecUDSP92g3CadJQMJtBGSf5BM1YS2DL1lybtXKZ1
+ETk8DSX6dbveTvq1nz/yrG7/L243Gnq2XyRvZ6BVeLHot1SnoWZAWibLRC8gxR/P
+8siMXB6cSVp8Q5WIOpVvSH62Fzm+RGkEKX0vvPpZ3th/q1jXEEFReTsQdFfLCDU2
+jzIUnfOW1pR5FgOUls2JcQ+vI2OYWQ2FwyrFAKHowFS+x7sf9qEQ+sBpQcwpUgNf
+pLSzk95gpjEuKWfkh5N6y/PRlWS+Tf44htnEEKgXwDhrol2HV5CeBRUPmeQG4bdM
+9Om0/RvAp6dlhddnSN8h7An5LPpJUx6Hr8foEYu+usbRfFEzjLpG0h1zd9FgkiHi
+A2B+2GQwn270eJKGn4/w
+=qrhm
 -----END PGP SIGNATURE-----
