@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/ipsec-tools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipsec-tools/ChangeLog,v 1.115 2014/01/30 22:53:45 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipsec-tools/ChangeLog,v 1.116 2014/02/28 16:41:59 blueness Exp $
+
+*ipsec-tools-0.8.2 (28 Feb 2014)
+
+  28 Feb 2014; Anthony G. Basile <blueness@gentoo.org>
+  +ipsec-tools-0.8.2.ebuild:
+  Version bump
 
 *ipsec-tools-0.8.1-r1 (30 Jan 2014)
 
